@startuml
title -MODELO ENTIDAD-RELACIÓN SADAT-

' Entidades principales
entity "Usuario" as usuario {
  * id : Integer
  --
  * username : String
  * email : String
  * password : String
  * tipo : TipoUsuario
  * fecha_registro : DateTime
  telefono : String
  direccion : Text
}

entity "MicroempresaIntegral" as empresaIntegral {
  * id : Integer
  --
  * nombre_empresa : String
  * rut_empresa : String
  descripcion : Text
  imagen : String
}

entity "MicroempresaSatelite" as empresaSatelite {
  * id : Integer
  --
  * nombre_empresa : String
  * rut_empresa : String
  descripcion : Text
  imagen : String
}

entity "CategoriaProducto" as categoria {
  * id : Integer
  --
  * nombre : String
  descripcion : Text
}

entity "ProductoTerminado" as producto {
  * id : Integer
  --
  * nombre : String
  * descripcion : Text
  * precio : Decimal
  * stock : Integer
  imagen : String
}

entity "ComentarioProducto" as comentario {
  * id : Integer
  --
  * texto : Text
  * fecha : DateTime
  likes : Integer
  dislikes : Integer
}

entity "CalificacionProducto" as calificacion {
  * id : Integer
  --
  * puntuacion : Integer
  * fecha : DateTime
}

entity "Servicio" as servicio {
  * id : Integer
  --
  * nombre : String
  * descripcion : Text
  * precio_minimo : Decimal
  * precio_maximo : Decimal
  * fecha_creacion : DateTime
}

entity "Carrito" as carrito {
  * id : Integer
  --
  * fecha_creacion : DateTime
  fecha_actualizacion : DateTime
}

entity "ItemCarrito" as itemCarrito {
  * id : Integer
  --
  * cantidad : Integer
  fecha_agregado : DateTime
}

entity "Pedido" as pedido {
  * id : Integer
  --
  * cantidad : Integer
  * fecha_pedido : DateTime
  * fecha_entrega : Date
  * estado : EstadoPedido
  * total : Decimal
}

entity "DetallePedido" as detallePedido {
  * id : Integer
  --
  * cantidad : Integer
  * precio_unitario : Decimal
  * subtotal : Decimal
}

entity "PedidoPersonalizado" as pedidoPersonalizado {
  * id : Integer
  --
  * descripcion : Text
  * cantidad : Integer
  * fecha_solicitud : DateTime
  estado : EstadoPedido
  cotizacion : Decimal
  fecha_entrega_estimada : Date
  referencia_imagen : String
}

entity "SolicitudConfeccion" as solicitudConfeccion {
  * id : Integer
  --
  * descripcion : Text
  * cantidad : Integer
  * fecha_solicitud : DateTime
  estado : EstadoSolicitud
  material_cliente : Boolean
  detalles_material : Text
}

entity "Notificacion" as notificacion {
  * id : Integer
  --
  * titulo : String
  * mensaje : Text
  * fecha : DateTime
  * tipo : TipoNotificacion
  leida : Boolean
}

entity "Transaccion" as transaccion {
  * id : Integer
  --
  * monto : Decimal
  * fecha : DateTime
  * estado : EstadoTransaccion
  * metodo_pago : String
  descripcion : Text
}

entity "Reporte" as reporte {
  * id : Integer
  --
  * titulo : String
  * contenido : Text
  * fecha_generacion : DateTime
  * tipo : TipoReporte
}

entity "Queja" as queja {
  * id : Integer
  --
  * asunto : String
  * descripcion : Text
  * fecha : DateTime
  * estado : EstadoQueja
}

' Relaciones
usuario ||--o{ empresaIntegral
usuario ||--o{ empresaSatelite
usuario ||--o{ carrito

empresaIntegral ||--o{ producto
empresaSatelite ||--o{ servicio

producto }o--|| categoria
producto ||--o{ comentario
producto ||--o{ calificacion

carrito ||--o{ itemCarrito
itemCarrito }o--|| producto

usuario ||--o{ pedido
pedido ||--o{ detallePedido
detallePedido }o--|| producto

usuario ||--o{ pedidoPersonalizado
pedidoPersonalizado }o--|| empresaIntegral

usuario ||--o{ solicitudConfeccion
solicitudConfeccion }o--|| empresaSatelite
solicitudConfeccion }o--o{ empresaIntegral

comentario }o--|| usuario
calificacion }o--|| usuario

' Nuevas relaciones
usuario ||--o{ notificacion
notificacion }o--o{ pedido
notificacion }o--o{ solicitudConfeccion

pedido ||--o{ transaccion
pedidoPersonalizado ||--o{ transaccion
solicitudConfeccion ||--o{ transaccion

usuario ||--o{ queja
queja }o--o{ pedido
queja }o--o{ solicitudConfeccion

empresaIntegral ||--o{ reporte
empresaSatelite ||--o{ reporte

@enduml

@enduml

@enduml